--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -17,14 +17,14 @@
   %tbody
     - @events.each do |event|
       %tr
-        %td= link_to event.date.strftime('%d-%m-%Y'), event, class: 'show-link'
+        %td= event.date.strftime('%d-%m-%Y')#, event, class: 'show-link'
         %td= event.time.to_s(:time)
         %td= link_to event.name, event, class: 'show-link'
-        %td= link_to event.venue, event, class: 'show-link'
+        %td= event.venue#, event, class: 'show-link'
         %td= event.organizer
         %td.buttons
-          %span.btn.medium.warning= link_to t('edit'), edit_event_path(event)
-          %br
-          %span.btn.medium.danger= link_to t('destroy'), event, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          / %span.btn.medium.warning= link_to t('edit'), edit_event_path(event)
+          / %br
+          %span.btn.medium.danger.padam-small= link_to t('destroy'), event, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
