--- a/app/views/media_profiles/show.html.haml
+++ b/app/views/media_profiles/show.html.haml
@@ -27,6 +27,9 @@
       %td=t('email')
       %td= @media_profile.email
     %tr
+      %td=t('personal_email')
+      %td= @media_profile.personal_email
+    %tr
       %td=t('phone')
       %td= @media_profile.phone
     %tr
