--- a/app/views/media_profiles/_form.html.haml
+++ b/app/views/media_profiles/_form.html.haml
@@ -25,6 +25,9 @@
               %th= f.label t('email')
               %td= f.text_field :email, class: 'text input'
             %tr
+              %th= f.label t('personal_email')
+              %td= f.text_field :personal_email, class: 'text input'
+            %tr
               %th= f.label t('office_phone')
               %td= f.text_field :office_phone, class: 'text input'
             %tr
