--- a/app/views/media_profiles/show.html.haml
+++ b/app/views/media_profiles/show.html.haml
@@ -24,6 +24,9 @@
       %td=t('company_name')
       %td= @media_profile.company_name
     %tr
+      %td=t('media_name')
+      %td= @media_profile.media_name
+    %tr
       %td=t('email')
       %td= @media_profile.email
     %tr
