--- a/app/views/media_profiles/_choose_media_type_select.html.haml
+++ b/app/views/media_profiles/_choose_media_type_select.html.haml
@@ -3,12 +3,12 @@
     %h3.four.columns
       = t('.choose_media_type')  
   .row   
-    .five.columns 
+    .four.columns 
       %ul
         %li.field
           .picker
             - select_options = [[t('all_media'),'all_media']] + MediaProfile.media_types.map{ |a| [a,a]}
-            = select_tag 'media_profile_select', options_for_select(select_options)
+            = select_tag 'media_profile_select', options_for_select(select_options, selected: @media_type)
     .two.columns
       %span.inline.btn.medium.primary
         = f.button t('select')
