--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -20,25 +20,25 @@
     - @media_profiles.each do |media_profile|
       %tr
         %td= media_profile.media_type
-        %td= link_to media_profile.name, media_profile, class: 'show-link'
+        %td= link_to "#{media_profile.try(:title)} #{media_profile.name}".strip, media_profile, class: 'show-link'
         %td= media_profile.company_name
         %td= link_to media_profile.email, media_profile, class: 'show-link'
-        %td.buttons{rowspan: 2}
-          %span.btn.medium.warning= link_to t('edit'), edit_media_profile_path(media_profile), class: 'wider-btn'
-          %br
-          %span.btn.medium.danger= link_to t('destroy'), media_profile, :method => :delete, :data => { :confirm => t('are_you_sure') }
-      %tr
-        %td
-        %td.profile-details{colspan: 3}
-          %ul
-            %li
-              %div
-                %strong= t('designation') + ':'
-              %div= media_profile.designation
-            %li
-              %div
-                %strong= t('office_phone') + ':'
-              %div= media_profile.office_phone
+        %td.buttons
+          / %span.btn.medium.warning= link_to t('edit'), edit_media_profile_path(media_profile), class: 'wider-btn'
+          / %br
+          %span.btn.medium.danger.padam-small= link_to t('destroy'), media_profile, :method => :delete, :data => { :confirm => t('are_you_sure') }
+        / %tr
+        /   %td
+        /   %td.profile-details{colspan: 3}
+        /     %ul
+        /       %li
+        /         %div
+        /           %strong= t('designation') + ':'
+        /         %div= media_profile.designation
+        /       %li
+        /         %div
+        /           %strong= t('office_phone') + ':'
+        /         %div= media_profile.office_phone
         / %td= media_profile.designation
         / %td= media_profile.company_name
         / %td= media_profile.office_phone
