--- a/app/views/media_profiles/_choose_media_type_select.html.haml
+++ b/app/views/media_profiles/_choose_media_type_select.html.haml
@@ -3,12 +3,14 @@
     %h3.four.columns
       = t('.choose_media_type')  
   .row   
-    .four.columns 
-      %ul
+    .twelve.columns 
+      %ul.media-type-select
         %li.field
           .picker
             - select_options = [[t('all_media'),'all_media']] + MediaProfile.media_types.map{ |a| [a,a]}
             = select_tag 'media_profile_select', options_for_select(select_options, selected: @media_type)
-    .two.columns
-      %span.inline.btn.medium.primary
-        = f.button t('select')
+        %li.field
+          = f.text_field :search, class: 'text input', size: '60', placeholder: t('enter_search_terms')
+        %li
+          %span.inline.btn.medium.primary
+            = f.button t('select')
