--- a/app/views/media_profiles/_form.html.haml
+++ b/app/views/media_profiles/_form.html.haml
@@ -54,13 +54,13 @@
               %th= f.label t('email')
               %td= f.text_field :email, class: 'text input', placeholder: 'email_rasmi@domain_syarikat.com'
             %tr
-              %th= f.label t('personal_email')
+              %th= f.label :personal_email, t('personal_email')
               %td= f.text_field :personal_email, class: 'text input', placeholder: 'email_peribadi@domain.com'
             %tr
-              %th= f.label t('office_phone')
+              %th= f.label :office_phone, t('office_phone')
               %td= f.text_field :office_phone, class: 'text input', placeholder: '0378806449'
             %tr
-              %th= f.label t('phone')
+              %th= f.label :phone, t('phone')
               %td= f.text_field :phone, class: 'text input', placeholder: '0123456789'
     .row            
       .actions
