--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,47 @@
+body {
+  .hello {
+    min-height: 550px;
+  }
+  .welcome-hero {
+    margin-top: 10%;
+  }
+  &.welcome {
+   
+    background: -webkit-linear-gradient(lightgray,gray) !important; /* For Safari */
+    background: -o-linear-gradient(lightgray,gray) !important; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(lightgray,gray) !important; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(lightgray,gray) !important; /* Standard syntax (must be last) */
+
+    .button-box {
+      height: 100px;
+      background: white;
+      margin-top: 20px;
+      border-radius: 5px;
+      box-shadow: 2px 2px 5px gray;
+
+      .minibox {
+        margin: 30px 0px 0px 0px;
+        padding-left: 30px;
+        .btn {
+          width: 250px;
+        }
+      }
+    }
+  }
+
+  h2{
+    strong {
+      font-family: 'Titillium Web', sans-serif;
+      font-weight: 900;
+      text-shadow: 2px 2px 10px gray;
+    }
+  }
+}
 .navbar {
-  background: darkgray !important;
+background: -webkit-linear-gradient(darkgray, black) !important; /* For Safari */
+background: -o-linear-gradient(darkgray, black) !important; /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(darkgray, black) !important; /* For Firefox 3.6 to 15 */
+background: linear-gradient(darkgray, black) !important; /* Standard syntax (must be last) */
 
   .logo {
     img {
