User login. can login with username.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,9 +1,18 @@
 body {
-  .hello {
+  .wrapper {
     min-height: 550px;
   }
   .welcome-hero {
     margin-top: 10%;
+  }
+
+  .sign-in {
+    margin-top: 120px;
+    border: none;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px gray;
+    
   }
   &.welcome {
    
