--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     = render 'layouts/header'
     .row
       = render 'layouts/errors'
-    .row.hello
+    .row.wrapper
       %section.tabs
         = yield
     %br
