--- a/app/views/layouts/empty.html.haml
+++ b/app/views/layouts/empty.html.haml
@@ -14,7 +14,7 @@
     = render 'layouts/empty_header'
     .row
       = render 'layouts/errors'
-    .row
+    .row.wrapper
       %section.tabs
         = yield
     %br
