--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,6 +22,9 @@
           %li
             =link_to '#' do
               %i.icon-rss
+          - if current_user
+            %li
+              = link_to 'Logout', destroy_user_session_path, method: :delete
       /- Search
       / %ul.six.columns
       /   %li.field
