add footer details

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,7 @@ body {
     background: white;
     border-radius: 5px;
     box-shadow: 2px 2px 10px gray;
-    
+
   }
   &.welcome {
    
@@ -143,4 +143,8 @@ table {
 
 .event-back {
   padding-left: 20px;
+}
+
+.footext {
+  color: white;
 }
