--- a/app/views/layouts/_empty_footer.html.haml
+++ b/app/views/layouts/_empty_footer.html.haml
@@ -9,5 +9,11 @@
           %li
             = link_to 'Contact Us', '#'
     .push_four.four.columns.center
-      %p.copyright
+      %p.footext
+        Menara MPS, Persiaran 3,
+        Bandar Baru Selayang,
+        68100 Batu Caves,
+        Selangor Darul Ehsan
+        E-mel:aduanmps@mps.gov.my
+      %p.copyright.footext
         Copyright &copy; 2013, MPS
