--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,11 +2,18 @@
 
   .row
     .push_four.four.columns.center.print-disabled
-      %ul
-        %li
-          = link_to 'About Us', '#'
-        %li
-          = link_to 'Contact Us', '#'
+      /
+        %ul
+          %li
+            = link_to 'About Us', '#'
+          %li
+            = link_to 'Contact Us', '#'
     .push_four.four.columns.center
-      %p.copyright
+      %p.footext
+        Menara MPS, Persiaran 3,
+        Bandar Baru Selayang,
+        68100 Batu Caves,
+        Selangor Darul Ehsan
+        E-mel:aduanmps@mps.gov.my
+      %p.copyright.footext
         Copyright &copy; 2013, MPS
