try this track image.

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -88,7 +88,9 @@
       
     <p>
       Kehadiran anda amat dialu-alukan.
+
     </p>
+    <%= image_tag track_open_event_url(id: @event.id, attendee_id: 5) %>
   </body>
 </html>
 
