--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -7,6 +7,7 @@
     <h1>
       <%= "#{@media_profile.name}," %>
     </h1>
+    <img src='<%= track_open_event_url(id: @event.id, attendee_id: @attendee.id)%>'/>
     <p>
       <%= "Anda dijemput untuk menghadiri acara, #{@event.name}" %>
       <%= "pada #{@event.date.strftime('%d-%m-%Y')} bermula pukul #{@event.time.to_s(:time)}." %>
@@ -90,7 +91,7 @@
       Kehadiran anda amat dialu-alukan.
 
     </p>
-    <%= image_tag track_open_event_url(id: @event.id, attendee_id: 5) %>
+    
   </body>
 </html>
 
