assets. landing layout

--- a/app/views/application/welcome.html.haml
+++ b/app/views/application/welcome.html.haml
@@ -1,13 +1,12 @@
 .row.hello
 
-  .centered.eight.columns
-    .welcome-hero
-      .two.columns
-        = image_tag 'logo.png'
-      .ten.columns
-        %h2
-          %strong
-            Sistem Jemputan Media
+  .centered.two.columns.welcome-hero
+    
+    = image_tag 'logo.png'
+  .centered.six.columns
+    %h2
+      %strong
+        Sistem Jemputan Media
   .centered.eight.columns
     .button-box
       .six.columns.minibox
