--- a/app/views/events/edit_recipients.html.haml
+++ b/app/views/events/edit_recipients.html.haml
@@ -26,5 +26,5 @@
                  
                     %span
     %span.btn.medium.primary
-      = f.button t('send'), value: 'send_ids'
+      = f.button t('.send'), value: 'send_ids'
                     
