Footer smaller a bit.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,6 @@
 body {
   .wrapper {
-    min-height: 550px;
+    min-height: 570px;
   }
   .welcome-hero {
     margin-top: 10%;
@@ -146,5 +146,7 @@ table {
 }
 
 .footext {
+  font-size: 0.8em;
   color: white;
+  text-align: center;
 }
