--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -8,12 +8,8 @@
             = link_to 'About Us', '#'
           %li
             = link_to 'Contact Us', '#'
-    .push_four.four.columns.center
+    .push_three.six.columns.centered
       %p.footext
-        Menara MPS, Persiaran 3,
-        Bandar Baru Selayang,
-        68100 Batu Caves,
-        Selangor Darul Ehsan
-        E-mel:aduanmps@mps.gov.my
-      %p.copyright.footext
-        Copyright &copy; 2013, MPS
+        Menara MPS, Persiaran 3, Bandar Baru Selayang,68100 Batu Caves, Selangor Darul Ehsan
+        %br
+        E-mel:aduanmps@mps.gov.my | Copyright &copy; 2013, MPS
