--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -4,70 +4,72 @@
     <meta content="text/html; charset=UTF-8' http-equiv='Content-Type"/>
   </head>
   <body>
-    <h1>
-      <%= "#{@media_profile.name}," %>
-    </h1>
-    <!--// <img src='<%= track_open_event_url(id: @event.id, attendee_id: @attendee.id)%>'/> //-->
-    <p>
-      <%= "Anda dijemput untuk menghadiri acara, #{@event.name}" %>
-      <%= "pada #{@event.date.strftime('%d-%m-%Y')} bermula pukul #{@event.time.to_s(:time)}." %>
-    </p>
-    <p>
-      Berikut adalah maklumat yang berkaitan:
-    </p>
-    <br/>
-    <table>
-      <tbody>
-        <% unless @event.name.blank? %>
-        <tr>
-          <td>
-            <strong>
-              <%= t('name') %>
-            </strong>
-          </td>
-          <td>
-            <%= @event.name %>
-          </td>
-        </tr>
-        <% end %>
-        <% unless @event.date.blank? %>
-        <tr>
-          <td>
-            <strong>
-              <%= t('date') %>
-            </strong>
-          </td>
-          <td>
-            <%= @event.date.strftime('%d-%m-%Y') %>
-          </td>
-        </tr>
-        <% end %>
-        <% unless @event.time.blank? %>
-        <tr>
-          <td>
-            <strong>
-              <%= t('time') %>
-            </strong>
-          </td>
-          <td>
-            <%= @event.time.to_s(:time) %>
-          </td>
-        </tr>
-        <% end %>
-        <% unless @event.venue.blank? %>
-        <tr>
-          <td>
-            <strong>
-              <%= t('venue') %>
-            </strong>
-          </td>
-          <td>
-            <%= @event.venue %>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+      <div style='background-image: url(<%= "http://localhost:3000#{@event.agenda_details.url}" %> ); background-repeat: no-repeat; margin: 20px 20px 20px 20px; padding: 20px 20px 20px 20px;'>
+      <h1>
+        <%= "#{@media_profile.name}," %>
+      </h1>
+      <!--// <img src='<%= track_open_event_url(id: @event.id, attendee_id: @attendee.id)%>'/> //-->
+      <p>
+        <%= "Anda dijemput untuk menghadiri acara, #{@event.name}" %>
+        <%= "pada #{@event.date.strftime('%d-%m-%Y')} bermula pukul #{@event.time.to_s(:time)}." %>
+      </p>
+      <p>
+        Berikut adalah maklumat yang berkaitan:
+      </p>
+      <br/>
+      <table>
+        <tbody style="border: 0px;">
+          <% unless @event.name.blank? %>
+          <tr>
+            <td>
+              <strong>
+                <%= t('name') %>
+              </strong>
+            </td>
+            <td>
+              <%= @event.name %>
+            </td>
+          </tr>
+          <% end %>
+          <% unless @event.date.blank? %>
+          <tr>
+            <td>
+              <strong>
+                <%= t('date') %>
+              </strong>
+            </td>
+            <td>
+              <%= @event.date.strftime('%d-%m-%Y') %>
+            </td>
+          </tr>
+          <% end %>
+          <% unless @event.time.blank? %>
+          <tr>
+            <td>
+              <strong>
+                <%= t('time') %>
+              </strong>
+            </td>
+            <td>
+              <%= @event.time.to_s(:time) %>
+            </td>
+          </tr>
+          <% end %>
+          <% unless @event.venue.blank? %>
+          <tr>
+            <td>
+              <strong>
+                <%= t('venue') %>
+              </strong>
+            </td>
+            <td>
+              <%= @event.venue %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
     <br/>
     <br/>
     <table cellspacing="10px" cellpadding="10px"> 
