--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8' http-equiv='Content-Type"/>
   </head>
   <body>
-      <div style='background-image: url(<%= "http://mps-mm.herokuapp.com#{@event.agenda_details.url}" %> ); background-repeat: no-repeat; margin: 20px 20px 20px 20px; padding: 20px 20px 20px 20px;'>
+      <div style='background-image: url(<%= "#{@event.agenda_details.url}" %> ); background-repeat: no-repeat; margin: 20px 20px 20px 20px; padding: 20px 20px 20px 20px;'>
       <h1>
         <%= "#{@media_profile.name}," %>
       </h1>
