--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,11 +18,10 @@ body {
 
   }
   &.welcome {
-   
-    background: -webkit-linear-gradient(lightgray,gray) !important; /* For Safari */
-    background: -o-linear-gradient(lightgray,gray) !important; /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(lightgray,gray) !important; /* For Firefox 3.6 to 15 */
-    background: linear-gradient(lightgray,gray) !important; /* Standard syntax (must be last) */
+
+
+    background-image: url('/assets/background.png') !important;
+    background-size: 100% 100% !important;
 
     .button-box {
       height: 100px;
