Locale change for "Choose media type"
Filter action for Events Controller

Search form for events index page.

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -3,6 +3,7 @@
   .btn.primary.medium.push_five.three.columns
     = link_to t('new_event'), new_event_path
 
+= render 'search_events'
 
 %table.rounded
   %thead
