--- a/app/views/layouts/empty.html.haml
+++ b/app/views/layouts/empty.html.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag "application"
     = stylesheet_link_tag '//fonts.googleapis.com/css?family=Titillium+Web:400,900'
     = stylesheet_link_tag "//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"
-    = javascript_include_tag "//code.jquery.com/ui/1.10.3/jquery-ui.js"\
+    = javascript_include_tag "//code.jquery.com/ui/1.10.3/jquery-ui.js"
 
     = javascript_include_tag :modernizr
     = csrf_meta_tags
