Let's see if inline css works

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -45,7 +45,7 @@
 
 -->
 </style>
-<div class='background-invitation'>
+<div class='background-invitation' style="font-size: 1.4em; color: red;">
   <div class='attendee-name'>
     <%= @attendee.full_name_with_prefix %>
   </div>
