--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -1,71 +1,68 @@
 <style type="text/css" media="all"><!--
-  .background-invitation {
-    background-image: url('http://#{@the_domain}/assets/invitation.png');
-    height: 1500px;
-    background-repeat: no-repeat;
-    width: 960px;
-    padding-left: 10px;
-    font-family: Helvetica;
-  }
+
 
   .attendee-name {
     
-    padding-top:310px;
-    text-align: center;
-    font-size: 1.6em;
-    font-weight: bold;
-    text-transform: uppercase;
+
   }
   .attendee-designation {
-    text-align: center;
-    font-size: 1.6em;
-    font-weight: 100;
-    text-transform: uppercase;
+
   }
 
   .event-name {
-    padding: 100 0 0 0;
-    text-align: center;
-    font-size: 2.0em;
-    font-weight: bold;
-    text-transform: uppercase;
+    
   }
 
   .event-details {
-    padding: 95 0 0 240;
-    font-size:1.2em;
-    font-weight: 100;
+    
 
 
   }
 
   .padding-extra {
-    padding-top: 5px;
-  }
+      }
 
 -->
 </style>
-<div class='background-invitation' style="font-size: 1.4em; color: red;">
-  <div class='attendee-name'>
+<div class='background-invitation' style="background-image: url('http://<%= @the_domain %>/assets/invitation.png');
+    height: 1500px;
+    background-repeat: no-repeat;
+    width: 960px;
+    padding-left: 10px;
+    font-family: Helvetica;">
+  <div class='attendee-name' style="padding-top:310px;
+    text-align: center;
+    font-size: 1.6em;
+    font-weight: bold;
+    text-transform: uppercase;">
     <%= @attendee.full_name_with_prefix %>
   </div>
-  <div class='attendee-designation'>
+  <div class='attendee-designation' style="text-align: center;
+    font-size: 1.6em;
+    font-weight: 100;
+    text-transform: uppercase;">
     <%= @attendee.designation %>
   </div>
-  <div class='event-name'>
+  <div class='event-name' style="padding: 100 0 0 0;
+    text-align: center;
+    font-size: 2.0em;
+    font-weight: bold;
+    text-transform: uppercase;">
     <%= @event.name %>
   </div>
-  <div class='event-details'>
+  <div class='event-details' style="padding: 95 0 0 240;
+    font-size:1.2em;
+    font-weight: 100;">
     <div class='date'>
       <%= @event.date %>
     </div>
-    <div class='time padding-extra'>
+    <div class='time padding-extra' style="padding-top: 5px;">
       <%= @event.time_string %>
     </div>
-    <div class='place padding-extra'>
+    <div class='place padding-extra' style="padding-top: 5px;">
       <%= @event.venue %>
     </div>
-    <div class='organizer padding-extra'>
+    <div class='organizer padding-extra' style="padding-top: 5px;">
       <%= @event.organizer %>
     </div>
   </div>
