Add RSVP BY to event. Show in invitation.

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -51,4 +51,8 @@
 </td>
 </tr>
 </table>
+<div style="padding-top:115px; padding-left:20px; font-size:1.4em;
+    font-weight: 200;">
+  <%= @event.rsvp_by %>
+</div>
 </div>
