--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -14,7 +14,10 @@
             %tr
               %th= f.label t('time')
               %td= f.time_select :time,{ampm: true, default: Time.parse("09:00")}
+            %tr
 
+              %th= f.label t('rsvp_by')
+              %td= f.text_field :rsvp_by, class: 'text input datepicker', value: ( @event.rsvp_by.try(:strftime,'%d-%m-%Y') )#unless @event.new_record? )
             %tr
               %th= f.label t('venue')
               %td= f.text_field :venue, class: 'text input'
