some styling for card

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -41,6 +41,11 @@
       <%= @event.organizer %>
     </div>
   </div>
+  <div>
+  <div style="padding-top:115px; padding-left:260px; font-size:1.4em;
+    font-weight: 200;">
+  <%= @event.rsvp_by %>
+</div>
 <table cellpadding="10px" cellspacing="10px">
 <tr>
 <td align="center" bgcolor="#000091" height="40" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block; position: absolute; top: 977px; right: 610px" width="300px">
@@ -51,8 +56,6 @@
 </td>
 </tr>
 </table>
-<div style="padding-top:115px; padding-left:20px; font-size:1.4em;
-    font-weight: 200;">
-  <%= @event.rsvp_by %>
 </div>
+
 </div>
