--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -48,14 +48,16 @@
     <p>* Sila RSVP sebelum <%= @event.rsvp_by %></p>
 </div>
 <div>
-<ul>
-<li align="center" bgcolor="#000091" height="40" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block; position: absolute; top: 977px; right: 610px" width="300px">
-<%= link_to 'Saya Akan Hadir', update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 1 ), style:"color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block" %>
-</li>
-<li align="center" bgcolor="#000091" height="40" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block; position: absolute; top: 977px; right: 190px" width="300px">
-<%= link_to 'Saya Tidak Akan Hadir', update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 0 ), style:"color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block" %>
-</li>
-</ul>
+  <table>
+    <tr>
+      <td align="center" bgcolor="#000091" height="40" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block; position: absolute; top: 977px; right: 610px" width="300px">
+      <%= link_to 'Saya Akan Hadir', update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 1 ), style:"color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block" %>
+      </td>
+      <td align="center" bgcolor="#000091" height="40" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block; position: absolute; top: 977px; right: 190px" width="300px">
+      <%= link_to 'Saya Tidak Akan Hadir', update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 0 ), style:"color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block" %>
+      </td>
+    </tr>
+  </table>
 </div>
 
 </div>
