use s3 for card images

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -1,5 +1,5 @@
 
-<div class='background-invitation' style="background-image: url('http://<%= @the_domain %>/assets/invitation.png');
+<div class='background-invitation' style="background-image: url('<%= @invitation_image_url %>');
     height: 1500px;
     background-repeat: no-repeat;
     width: 960px;
