--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -26,6 +26,6 @@
         %td.buttons
           / %span.btn.medium.warning= link_to t('edit'), edit_event_path(event)
           / %br
-          %span.btn.medium.danger.padam-small= link_to t('destroy'), event, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %span.btn.medium.danger.padam-small= link_to t('destroy'), event, :method => :delete, :data => { :confirm => 'Anda Pasti?' }
 
 %br
